Added configure check for hdtrace library.

--- a/MPICH2/mpich2-1.0.8p1/configure.in
+++ b/MPICH2/mpich2-1.0.8p1/configure.in
@@ -380,31 +380,6 @@ if test "$with_mpe" = "default" ; then
 fi
 
 
-BUILD_HDTRACE_WRAPPER=
-dnl use the hdtrace MPI wrapper (use it together with the hdTraceLibrary)
-AC_ARG_WITH(hdtraceWrapper,       
-[--with-hdtraceWrapper=path         Use HDTrace wrapper installed in "path"],
-    if test "x$withval" = "xyes" ; then                                 
-           AC_MSG_ERROR(--with-hdtraceWrapper must be given a pathname)        
-    else
-       CFLAGS="$CFLAGS -I$withval/include  $(pkg-config --cflags glib-2.0) -DUSE_MPI_VERSIONS"
-       CPPFLAGS+="-DUSE_MPI_VERSIONS"
-       LDFLAGS="$LDFLAGS -L$withval/lib"
-       LIBS="$LIBS -lhdTraceMPIWrapper $(pkg-config --libs glib-2.0)"
-       AC_DEFINE(HAVE_HDTRACE_WRAPPER, 1, [Define if HDTrace MPI Wrapper is used])
-       AC_DEFINE(USE_MPI_VERSIONS, 1, [Define if ROMIO shall use MPI calls for the wrapper])
-       AC_DEFINE(HDTRACE_ROMIO, 1, [Define if more ROMIO internals shall be traced])       
-       AC_DEFINE(HDTRACE_MPI_COLLECTIVE, 1, [Define if MPI collective call internals shall be traced])
-       BUILD_HDTRACE_WRAPPER=1       
-       # copy extended source code wrapper
-       mkdir -p src/include/
-       cp $withval/include/hdMPITracerCodeLocator.h src/include/ || exit 1
-    fi
-)
-
-AC_SUBST(BUILD_HDTRACE_WRAPPER)
-
-
 BUILD_HDTRACE=
 dnl use the hdtrace library for traceing (use it together with the hdtrace MPI wrapper)
 AC_ARG_WITH(hdtrace,       
@@ -417,10 +392,41 @@ AC_ARG_WITH(hdtrace,
        LIBS="$LIBS -lhdStats -lhdTrace"
        AC_DEFINE(HAVE_HDTRACE, 1, [Define if HDTrace library is used])
        BUILD_HDTRACE=1
+       AC_TRY_LINK([#include "hdTopo.h"], [ ], ,
+       AC_MSG_ERROR(hdtrace library is not usable))
     fi
 )
 
 AC_SUBST(BUILD_HDTRACE)
+
+BUILD_HDTRACE_WRAPPER=
+dnl use the hdtrace MPI wrapper (use it together with the hdTraceLibrary)
+AC_ARG_WITH(hdtraceWrapper,       
+[--with-hdtraceWrapper=path         Use HDTrace wrapper installed in "path"],
+    if test "x$withval" = "xyes" ; then                                 
+           AC_MSG_ERROR(--with-hdtraceWrapper must be given a pathname)        
+    else
+       CFLAGS="$CFLAGS -I$withval/include  $(pkg-config --cflags glib-2.0) -DUSE_MPI_VERSIONS"
+       CPPFLAGS+="-DUSE_MPI_VERSIONS"
+       LDFLAGS="$LDFLAGS -L$withval/lib"
+       LIBS="$LIBS -lhdTraceMPIWrapper -lhdStats -lhdTrace $(pkg-config --libs glib-2.0)"
+       AC_DEFINE(HAVE_HDTRACE_WRAPPER, 1, [Define if HDTrace MPI Wrapper is used])
+       AC_DEFINE(USE_MPI_VERSIONS, 1, [Define if ROMIO shall use MPI calls for the wrapper])
+       AC_DEFINE(HDTRACE_ROMIO, 1, [Define if more ROMIO internals shall be traced])       
+       AC_DEFINE(HDTRACE_MPI_COLLECTIVE, 1, [Define if MPI collective call internals shall be traced])
+       BUILD_HDTRACE_WRAPPER=1       
+       
+       AC_TRY_LINK([], [ ],
+       ,
+       AC_MSG_ERROR(HDMPI wrapper is not usable))
+       
+       # copy extended source code wrapper
+       mkdir -p src/include/
+       cp $withval/include/hdMPITracerCodeLocator.h src/include/ || exit 1
+    fi
+)
+
+AC_SUBST(BUILD_HDTRACE_WRAPPER)
 
 MPI_INCLUDE_HDTRACE_CODE_LOCATOR=
 AC_ARG_ENABLE(hdTraceSourceLine,
