--- a/PVFS2/2.8.1/.cproject
+++ b/PVFS2/2.8.1/.cproject
@@ -48,7 +48,7 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PVFS2-2.8.1/src/io/bmi}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PVFS2-2.8.1/src/common/gen-locks}&quot;"/>
 </option>
-<option id="gnu.c.compiler.option.preprocessor.def.symbols.2138952164" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
+<option id="gnu.c.compiler.option.preprocessor.def.symbols.2138952164" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
 <listOptionValue builtIn="false" value="__PVFS2_TROVE_THREADED__=1"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1155716272" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
