--- a/PVFS2/2.8.1/.cproject
+++ b/PVFS2/2.8.1/.cproject
@@ -47,9 +47,11 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/HDTraceWritingCLibrary/include}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PVFS2-2.8.1/src/io/bmi}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PVFS2-2.8.1/src/common/gen-locks}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/PerformanceTracingLibrary/include}&quot;"/>
 </option>
 <option id="gnu.c.compiler.option.preprocessor.def.symbols.2138952164" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
 <listOptionValue builtIn="false" value="__PVFS2_TROVE_THREADED__=1"/>
+<listOptionValue builtIn="false" value="HAVE_HDPTL=1"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1155716272" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 </tool>
