--- a/HDTraceWritingCLibrary/tests/Makefile
+++ b/HDTraceWritingCLibrary/tests/Makefile
@@ -6,14 +6,14 @@ MAKEDEPEND=gcc -MM
 
 #CPPFLAGS=-DDEBUG
 CPPFLAGS=
-CFLAGS=-g -O -std=c99 -pedantic -Wall -Wextra \
-	-Waggregate-return -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal \
-	-Wformat=2 -Winit-self -Winline -Wmissing-declarations \
-	-Wmissing-format-attribute -Wmissing-include-dirs -Wmissing-noreturn \
-	-Wmissing-prototypes -Wnested-externs -Wold-style-definition \
-	-Wredundant-decls -Wshadow -Wstrict-prototypes -Wswitch-default \
-	-Wswitch-enum -Wundef -Wwrite-strings \
-	-D_POSIX_C_SOURCE -D_GNU_SOURCE -I$(INCLUDE_DIR)
+CFLAGS=-g -O0 -ggdb -std=c99 -pedantic -Wall -Wextra -D_POSIX_C_SOURCE -D_GNU_SOURCE -I$(INCLUDE_DIR) -I../src
+#	-Waggregate-return -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal \
+#	-Wformat=2 -Winit-self -Winline -Wmissing-declarations \
+#	-Wmissing-format-attribute -Wmissing-include-dirs -Wmissing-noreturn \
+#	-Wmissing-prototypes -Wnested-externs -Wold-style-definition \
+#	-Wredundant-decls -Wshadow -Wstrict-prototypes -Wswitch-default \
+#	-Wswitch-enum -Wundef -Wwrite-strings \
+
 LDFLAGS=-L$(LIB_DIR) $(shell pkg-config --libs glib-2.0)  
 
 # use large file compilation environment
