Modified hdT_createTrace function and related mpi wrapper. Real (but yet simple) tracing of relation data.

--- a/HDTraceWritingCLibrary/src/Makefile
+++ b/HDTraceWritingCLibrary/src/Makefile
@@ -5,14 +5,13 @@ MAKEDEPEND=gcc -MM
 
 #CPPFLAGS=-DDEBUG
 CPPFLAGS=
-CFLAGS=-g -O -std=c99 -pedantic -Wall -Wextra 	-D_POSIX_C_SOURCE -D_GNU_SOURCE -I$(INCLUDE_DIR)
-#\
-#	-Waggregate-return -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal \
-#	-Wformat=2 -Winit-self -Winline -Wmissing-declarations \
-#	-Wmissing-format-attribute -Wmissing-include-dirs -Wmissing-noreturn \
-#	-Wmissing-prototypes -Wnested-externs -Wold-style-definition \
-#	-Wredundant-decls -Wshadow -Wstrict-prototypes -Wswitch-default \
-#	-Wswitch-enum -Wundef -Wwrite-strings \
+CFLAGS=-g -O -std=c99 -pedantic -Wall -Wextra 	-D_POSIX_C_SOURCE -D_GNU_SOURCE -I$(INCLUDE_DIR) \
+	-Waggregate-return -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal \
+	-Wformat=2 -Winit-self -Winline -Wmissing-declarations \
+	-Wmissing-format-attribute -Wmissing-include-dirs -Wmissing-noreturn \
+	-Wmissing-prototypes -Wnested-externs -Wold-style-definition \
+	-Wredundant-decls -Wshadow -Wstrict-prototypes -Wswitch-default \
+	-Wswitch-enum -Wundef -Wwrite-strings 
 
 # use large file compilation environment
 CFLAGS+=$(shell getconf LFS_CFLAGS) $(shell pkg-config --cflags glib-2.0) 
