* Stylistic changes to preprocessor macro definitions and invocations

--- a/HDTraceWritingCLibrary/tests/Makefile.am
+++ b/HDTraceWritingCLibrary/tests/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/common.am
 
-check_PROGRAMS = hdTopoTest hdStatsTest hdRelationTest
+check_PROGRAMS = hdTopoTest hdStatsTest hdRelationTest hdTraceTest
 
 hdTopoTest_SOURCES = hdTopoTest.c $(SRC_DIR)/hdTopo.c
 hdTopoTest_CFLAGS = -I$(INC_DIR)
@@ -9,9 +9,9 @@ hdStatsTest_SOURCES = hdStatsTest.c
 hdStatsTest_CFLAGS = -I$(SRC_DIR) -I$(INC_DIR)
 hdStatsTest_LDADD = $(LIB_DIR)/libhdStats.la
 
-#hdTraceTest_SOURCES = hdTraceTest.c
-#hdTraceTest_CFLAGS = -I$(INC_DIR)
-#hdTraceTest_LDADD = $(LIB_DIR)/libhdTrace.la
+hdTraceTest_SOURCES = hdTraceTest.c
+hdTraceTest_CFLAGS = -I$(INC_DIR)
+hdTraceTest_LDADD = $(LIB_DIR)/libhdTrace.la
 
 hdRelationTest_SOURCES = hdRelationTest.c
 hdRelationTest_CFLAGS = -I$(INC_DIR) $(GLIB_CFLAGS)
