* Fixed all problems reported by valgrind memcheck for hdTopoTest * Fixed some problems in hdStatsTest (valgrind memcheck still reports some problems that I didn't find) * Fixed missing header include in hdRelationTest

--- a/HDTraceWritingCLibrary/tests/Makefile.am
+++ b/HDTraceWritingCLibrary/tests/Makefile.am
@@ -8,6 +8,7 @@ hdTopoTest_CFLAGS = -I$(INC_DIR)
 hdStatsTest_SOURCES = hdStatsTest.c
 hdStatsTest_CFLAGS = -I$(SRC_DIR) -I$(INC_DIR)
 hdStatsTest_LDADD = $(LIB_DIR)/libhdStats.la
+hdStatsTest_LDFLAGS = -static
 
 hdTraceTest_SOURCES = hdTraceTest.c
 hdTraceTest_CFLAGS = -I$(INC_DIR)
