--- a/HDTraceWritingCLibrary/tests/Makefile.in
+++ b/HDTraceWritingCLibrary/tests/Makefile.in
@@ -71,7 +71,7 @@ hdTraceTest_OBJECTS = $(am_hdTraceTest_OBJECTS)
 hdTraceTest_DEPENDENCIES = $(LIB_DIR)/libhdTrace.la
 hdTraceTest_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(hdTraceTest_CFLAGS) \
-	$(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
+	$(CFLAGS) $(hdTraceTest_LDFLAGS) $(LDFLAGS) -o $@
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)/include
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -221,10 +221,11 @@ hdStatsTest_LDFLAGS = -static
 hdTraceTest_SOURCES = hdTraceTest.c
 hdTraceTest_CFLAGS = -I$(INC_DIR)
 hdTraceTest_LDADD = $(LIB_DIR)/libhdTrace.la
+hdTraceTest_LDFLAGS = -static
 hdRelationTest_SOURCES = hdRelationTest.c
 hdRelationTest_CFLAGS = -I$(INC_DIR) $(GLIB_CFLAGS)
 hdRelationTest_LDADD = $(LIB_DIR)/libhdRelation.la $(GLIB_LDADD)
-hdRelationTest_LDFLAGS = $(GLIB_LIBS)
+hdRelationTest_LDFLAGS = $(GLIB_LIBS) -static
 all: all-am
 
 .SUFFIXES:
@@ -638,6 +639,10 @@ uninstall-am:
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am
 
+
+# Build the tests already with target all
+# This is especially needed for eclipse autobuild function
+all: $(check_PROGRAMS)
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
