* Added tools directory to autotools managemed directories * Using SVN Keyword Id as version information for all source files

--- a/HDTraceWritingCLibrary/Makefile.in
+++ b/HDTraceWritingCLibrary/Makefile.in
@@ -196,7 +196,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = src lib . tests
+SUBDIRS = lib . tools tests
 SRC_DIR = $(top_srcdir)/src
 INC_DIR = $(top_srcdir)/include
 LIB_DIR = $(top_builddir)/lib
